@@ -1,4 +1,5 @@
 3.1.7
+	Fix NULL pointer referencing in urlcheck code
 	Fix body storage so that locators (^ and $) work for body regex
 	Fix spurious warning about unknown whitelisting conditions
 	Fix memory leaks when using urlchecks
